Ironed out a few slowing down bugs, and only just now thought to add a check that the route actually reaches the end, as well as speeding it up